// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component/FileAttachment should match snapshot, after change from file to image 1`] = `
<div
  className="post-image__column"
>
  <a
    className="post-image__thumbnail"
    href="#"
    onClick={[Function]}
  >
    <div
      className="post-image normal"
      style={
        Object {
          "backgroundImage": "url(/api/v4/files/2/thumbnail)",
          "backgroundSize": "cover",
        }
      }
    />
  </a>
  <div
    className="post-image__details"
  >
    <OverlayTrigger
      defaultOverlayShown={false}
      delayShow={1000}
      overlay={
        <Tooltip
          bsClass="tooltip"
          id="file-name__tooltip"
          placement="right"
        >
          Download "test.png"
        </Tooltip>
      }
      placement="top"
      trigger={
        Array [
          "hover",
          "focus",
        ]
      }
    >
      <a
        className="post-image__name"
        download="test.png"
        href="/api/v4/files/2"
        rel="noopener noreferrer"
        target="_blank"
      >
        test.png
      </a>
    </OverlayTrigger>
    <div>
      <a
        className="post-image__download"
        download="test.png"
        href="/api/v4/files/2"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          className="fa fa-download"
        />
      </a>
      <span
        className="post-image__type"
      >
        PNG
      </span>
      <span
        className="post-image__size"
      >
        100B
      </span>
    </div>
  </div>
</div>
`;

exports[`component/FileAttachment should match snapshot, file with long name 1`] = `
<div
  className="post-image__column"
>
  <a
    className="post-image__thumbnail"
    href="#"
    onClick={[Function]}
  >
    <div
      className="file-icon pdf"
    />
  </a>
  <div
    className="post-image__details"
  >
    <OverlayTrigger
      defaultOverlayShown={false}
      delayShow={1000}
      overlay={
        <Tooltip
          bsClass="tooltip"
          id="file-name__tooltip"
          placement="right"
        >
          Download "a-quite-long-filename-to-test-the-filename-shortener.pdf"
        </Tooltip>
      }
      placement="top"
      trigger={
        Array [
          "hover",
          "focus",
        ]
      }
    >
      <a
        className="post-image__name"
        download="a-quite-long-filename-to-test-the-filename-shortener.pdf"
        href="/api/v4/files/1"
        rel="noopener noreferrer"
        target="_blank"
      >
        a-quite-long-filename-to-test-the-f...
      </a>
    </OverlayTrigger>
    <div>
      <a
        className="post-image__download"
        download="a-quite-long-filename-to-test-the-filename-shortener.pdf"
        href="/api/v4/files/1"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          className="fa fa-download"
        />
      </a>
      <span
        className="post-image__type"
      >
        PDF
      </span>
      <span
        className="post-image__size"
      >
        100B
      </span>
    </div>
  </div>
</div>
`;

exports[`component/FileAttachment should match snapshot, regular file 1`] = `
<div
  className="post-image__column"
>
  <a
    className="post-image__thumbnail"
    href="#"
    onClick={[Function]}
  >
    <div
      className="file-icon pdf"
    />
  </a>
  <div
    className="post-image__details"
  >
    <OverlayTrigger
      defaultOverlayShown={false}
      delayShow={1000}
      overlay={
        <Tooltip
          bsClass="tooltip"
          id="file-name__tooltip"
          placement="right"
        >
          Download "test.pdf"
        </Tooltip>
      }
      placement="top"
      trigger={
        Array [
          "hover",
          "focus",
        ]
      }
    >
      <a
        className="post-image__name"
        download="test.pdf"
        href="/api/v4/files/1"
        rel="noopener noreferrer"
        target="_blank"
      >
        test.pdf
      </a>
    </OverlayTrigger>
    <div>
      <a
        className="post-image__download"
        download="test.pdf"
        href="/api/v4/files/1"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          className="fa fa-download"
        />
      </a>
      <span
        className="post-image__type"
      >
        PDF
      </span>
      <span
        className="post-image__size"
      >
        100B
      </span>
    </div>
  </div>
</div>
`;

exports[`component/FileAttachment should match snapshot, regular image 1`] = `
<div
  className="post-image__column"
>
  <a
    className="post-image__thumbnail"
    href="#"
    onClick={[Function]}
  >
    <div
      className="post-image normal"
      style={
        Object {
          "backgroundImage": "url(/api/v4/files/1/thumbnail)",
          "backgroundSize": "cover",
        }
      }
    />
  </a>
  <div
    className="post-image__details"
  >
    <OverlayTrigger
      defaultOverlayShown={false}
      delayShow={1000}
      overlay={
        <Tooltip
          bsClass="tooltip"
          id="file-name__tooltip"
          placement="right"
        >
          Download "test.png"
        </Tooltip>
      }
      placement="top"
      trigger={
        Array [
          "hover",
          "focus",
        ]
      }
    >
      <a
        className="post-image__name"
        download="test.png"
        href="/api/v4/files/1"
        rel="noopener noreferrer"
        target="_blank"
      >
        test.png
      </a>
    </OverlayTrigger>
    <div>
      <a
        className="post-image__download"
        download="test.png"
        href="/api/v4/files/1"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          className="fa fa-download"
        />
      </a>
      <span
        className="post-image__type"
      >
        PNG
      </span>
      <span
        className="post-image__size"
      >
        100B
      </span>
    </div>
  </div>
</div>
`;

exports[`component/FileAttachment should match snapshot, small image 1`] = `
<div
  className="post-image__column"
>
  <a
    className="post-image__thumbnail"
    href="#"
    onClick={[Function]}
  >
    <div
      className="post-image small"
      style={
        Object {
          "backgroundImage": "url(/api/v4/files/1/thumbnail)",
          "backgroundSize": "cover",
        }
      }
    />
  </a>
  <div
    className="post-image__details"
  >
    <OverlayTrigger
      defaultOverlayShown={false}
      delayShow={1000}
      overlay={
        <Tooltip
          bsClass="tooltip"
          id="file-name__tooltip"
          placement="right"
        >
          Download "test.png"
        </Tooltip>
      }
      placement="top"
      trigger={
        Array [
          "hover",
          "focus",
        ]
      }
    >
      <a
        className="post-image__name"
        download="test.png"
        href="/api/v4/files/1"
        rel="noopener noreferrer"
        target="_blank"
      >
        test.png
      </a>
    </OverlayTrigger>
    <div>
      <a
        className="post-image__download"
        download="test.png"
        href="/api/v4/files/1"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          className="fa fa-download"
        />
      </a>
      <span
        className="post-image__type"
      >
        PNG
      </span>
      <span
        className="post-image__size"
      >
        100B
      </span>
    </div>
  </div>
</div>
`;

exports[`component/FileAttachment should match snapshot, svg image 1`] = `
<div
  className="post-image__column"
>
  <a
    className="post-image__thumbnail"
    href="#"
    onClick={[Function]}
  >
    <img
      className="post-image normal"
      src="/api/v4/files/1"
    />
  </a>
  <div
    className="post-image__details"
  >
    <OverlayTrigger
      defaultOverlayShown={false}
      delayShow={1000}
      overlay={
        <Tooltip
          bsClass="tooltip"
          id="file-name__tooltip"
          placement="right"
        >
          Download "test.svg"
        </Tooltip>
      }
      placement="top"
      trigger={
        Array [
          "hover",
          "focus",
        ]
      }
    >
      <a
        className="post-image__name"
        download="test.svg"
        href="/api/v4/files/1"
        rel="noopener noreferrer"
        target="_blank"
      >
        test.svg
      </a>
    </OverlayTrigger>
    <div>
      <a
        className="post-image__download"
        download="test.svg"
        href="/api/v4/files/1"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          className="fa fa-download"
        />
      </a>
      <span
        className="post-image__type"
      >
        SVG
      </span>
      <span
        className="post-image__size"
      >
        100B
      </span>
    </div>
  </div>
</div>
`;

exports[`component/FileAttachment should match snapshot, when file is not loaded 1`] = `
<div
  className="post-image__column"
>
  <a
    className="post-image__thumbnail"
    href="#"
    onClick={[Function]}
  >
    <div
      className="post-image__load"
    />
  </a>
  <div
    className="post-image__details"
  >
    <OverlayTrigger
      defaultOverlayShown={false}
      delayShow={1000}
      overlay={
        <Tooltip
          bsClass="tooltip"
          id="file-name__tooltip"
          placement="right"
        >
          Download "test.pdf"
        </Tooltip>
      }
      placement="top"
      trigger={
        Array [
          "hover",
          "focus",
        ]
      }
    >
      <a
        className="post-image__name"
        download="test.pdf"
        href="/api/v4/files/1"
        rel="noopener noreferrer"
        target="_blank"
      >
        test.pdf
      </a>
    </OverlayTrigger>
    <div>
      <a
        className="post-image__download"
        download="test.pdf"
        href="/api/v4/files/1"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          className="fa fa-download"
        />
      </a>
      <span
        className="post-image__type"
      >
        PDF
      </span>
      <span
        className="post-image__size"
      >
        100B
      </span>
    </div>
  </div>
</div>
`;

exports[`component/FileAttachment should match snapshot, with compact display 1`] = `
<div
  className="post-image__column"
>
  <a
    className="post-image__thumbnail"
    href="#"
    onClick={[Function]}
  >
    <div
      className="file-icon pdf"
    />
  </a>
  <div
    className="post-image__details"
  >
    <OverlayTrigger
      defaultOverlayShown={false}
      delayShow={1000}
      overlay={
        <Tooltip
          bsClass="tooltip"
          id="file-name__tooltip"
          placement="right"
        >
          test.pdf
        </Tooltip>
      }
      placement="top"
      trigger={
        Array [
          "hover",
          "focus",
        ]
      }
    >
      <a
        className="post-image__name"
        href="#"
        onClick={[Function]}
        rel="noopener noreferrer"
      >
        <span
          className="icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg width='17px' height='16px' viewBox='0 0 17 16' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'> <g fill='inherit' fill-rule='evenodd'> <g transform='translate(-1029.000000, -954.000000)' fill-rule='nonzero' fill='inherit'> <g transform='translate(25.000000, 937.000000)'> <g transform='translate(1004.000000, 17.000000)'> <path d='M5.35,15.56 C3.98,15.56 2.61,15.039 1.567,13.997 C0.557,12.984 0,11.642 0,10.212 C0,8.783 0.557,7.44 1.566,6.429 L6.869,1.126 C8.371,-0.376 10.812,-0.375 12.314,1.125 C13.815,2.627 13.815,5.069 12.314,6.57 L7.011,11.873 C6.094,12.792 4.603,12.79 3.687,11.873 C2.771,10.958 2.771,9.467 3.687,8.551 L8.99,3.248 C9.323,2.916 9.861,2.916 10.193,3.248 C10.525,3.579 10.525,4.118 10.193,4.449 L4.89,9.752 C4.637,10.006 4.637,10.418 4.89,10.672 C5.143,10.923 5.555,10.925 5.809,10.672 L11.113,5.369 C11.952,4.53 11.952,3.166 11.113,2.327 C10.276,1.49 8.911,1.488 8.073,2.327 L2.769,7.631 C2.079,8.32 1.699,9.237 1.699,10.212 C1.699,11.188 2.079,12.104 2.768,12.794 C4.19,14.216 6.502,14.216 7.925,12.798 L7.929,12.794 C7.929,12.793 7.929,12.793 7.929,12.793 L15.355,5.369 C15.687,5.037 16.224,5.037 16.556,5.369 C16.888,5.7 16.888,6.239 16.556,6.57 L8.779,14.348 L8.761,14.332 C7.776,15.15 6.562,15.56 5.35,15.56 Z'></path> </g> </g> </g> </g> </svg>",
            }
          }
        />
        test.pdf
      </a>
    </OverlayTrigger>
    <div>
      <a
        className="post-image__download"
        download="test.pdf"
        href="/api/v4/files/1"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          className="fa fa-download"
        />
      </a>
      <span
        className="post-image__type"
      >
        PDF
      </span>
      <span
        className="post-image__size"
      >
        100B
      </span>
    </div>
  </div>
</div>
`;

exports[`component/FileAttachment should match snapshot, without compact display and without can download 1`] = `
<div
  className="post-image__column"
>
  <a
    className="post-image__thumbnail"
    href="#"
    onClick={[Function]}
  >
    <div
      className="file-icon pdf"
    />
  </a>
  <div
    className="post-image__details"
  >
    <span
      className="post-image__name"
    >
      test.pdf
    </span>
    <div>
      <span
        className="post-image__type"
      >
        PDF
      </span>
      <span
        className="post-image__size"
      >
        100B
      </span>
    </div>
  </div>
</div>
`;
